# kaggle-google-smartphone-decimeter-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
notebook/: nb001_eda.ipynb  nb002_interpolate_device.ipynb  nb004_mean_prediction.ipynb  nb005_outlier_correction.ipynb  nb006_position_shift.ipynb  nb007_postprocess.ipynb  nb008_postprocess.ipynb  nb009_postprocess.ipynb  nb010_postprocess.ipynb
notebook/analysis/: 001_GSDC_EDA.ipynb
