[tool.poetry]
name = "googlesmartphonedecimeterchallenge"
version = "0.1.0"
description = ""
authors = ["azupero_adolph <azupero.adolph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
plotly = "^4.14.3"
tqdm = "^4.61.0"
jupyterlab = "^3.0.16"
kaggle = "^1.5.12"
scikit-learn = "^0.24.2"
lightgbm = "^3.2.1"
sweetviz = "^2.1.2"
ptitprince = "^0.2.5"
matplotlib-venn = "^0.11.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.5b2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
